Fix glaring homepage bugs on IE11. [finishes #62714498]

--- a/app/assets/stylesheets/Welcome/show.less
+++ b/app/assets/stylesheets/Welcome/show.less
@@ -8,7 +8,7 @@ body.welcome-show {
     overflow: auto;
     display: table;
     height: 100%;
-    -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box;
+    box-sizing: border-box;
   }
 
   .centering-cell {
