--- a/app/assets/stylesheets/buttons.less
+++ b/app/assets/stylesheets/buttons.less
@@ -20,11 +20,12 @@
   // The background will be positioned such that only 1 and 2 are visible.
   // On hover, it will move such that only 2 and 3 are visible.
 
-  @e1: escape("@{color1}");
-  @e2: escape("@{color2}");
-  @e3: escape("@{color3}");
-  @svg: "data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' width='100%' height='400%' viewBox='0 0 1 4' preserveAspectRatio='none'><rect fill='@{e1}' x='0' y='0' width='1' height='4'/><path fill='@{e2}' d='M0,1L1,0L1,4L0,4Z'/><path fill='@{e3}' d='M0,4L1,3.5L1,4L0,4Z'/></svg>";
-  background-image: url(@svg);
+  @svg: "<svg xmlns='http://www.w3.org/2000/svg' width='100%' height='400%' viewBox='0 0 1 4' preserveAspectRatio='none'><rect fill='@{color1}' x='0' y='0' width='1' height='4'/><path fill='@{color2}' d='M0,1L1,0L1,4L0,4Z'/><path fill='@{color3}' d='M0,4L1,3.5L1,4L0,4Z'/></svg>";
+  // IE11 doesn't understand these URLs when they aren't base64-encoded.
+  // And yes, this base64 function was hand-coded (and then uglified): all the
+  // ones online seem to assume UTF-8 input.
+  @base64: ~`(function(a){for(var r="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789+/=",t="",c=0;c<a.length;){var h=a.charCodeAt(c++),A=a.charCodeAt(c++),e=a.charCodeAt(c++),o=h>>2,d=(3&h)<<4|A>>4,n=(15&A)<<2|e>>6,N=63&e;isNaN(A)?n=N=64:isNaN(e)&&(N=64),t+=r.charAt(o)+r.charAt(d)+r.charAt(n)+r.charAt(N)}return t})(@{svg})`;
+  background-image: ~"url(data:image/svg+xml;base64,@{base64})";
   background-size: 100% 400%;
   background-position: 0 0;
   .transition(background-position .15s linear);
